# pico-de-gallo

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  deny.toml
.github/: .release-please-manifest.json  RELEASE-PLEASE.md  RELEASE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  release-please-config.json
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: agent-guide-parity.yml  check.yml  gh-pages.yml  nostd.yml  release-application.yml  release-crates.yml  release-ffi.yml  release-firmware.yml  release-hardware.yml  release-please.yml  release-pyco.yml
.opencode/agent/: coder.md  integrator.md
book/: book.toml
book/src/: SUMMARY.md  adc.md  driver.md  ffi.md  gallo-crates.md  getting-started.md  gpio.md  introduction.md  logic-capture.md  uart.md
case/v1.0/: Case.FCStd
case/v1.1/: Case.FCStd
crates/: Cargo.toml
crates/pico-de-gallo-analyzer/: Cargo.toml
crates/pico-de-gallo-analyzer/src/: app.rs  capture.rs  decode.rs  main.rs  ui.rs
crates/pyco-de-gallo/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/pyco-de-gallo/examples/: README.md  adc_read.py  device_info.py  gpio_blink.py  gpio_events.py  i2c_scan.py  onewire_scan.py  pwm_fade.py  spi_loopback.py  tmp108_live.py  tmp108_read.py  uart_echo.py
crates/pyco-de-gallo/src/: lib.rs
hardware/: pico-de-gallo.kicad_pcb  pico-de-gallo.kicad_prl  pico-de-gallo.kicad_pro  pico-de-gallo.kicad_sch
(+51 files in other folders)
